# rag-crawler

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
application/: exceptions.py
application/commands/: cli.py
application/routers/youtube/: dependencies.py  router.py
application/services/: channel_crawl_service.py  channel_insert_service.py  schedule_service.py  youtube_service.py
audit/loggers/: log_repository.py  youtube_logger.py
domain/adapter/: youtube_api_adapter.py
domain/model/: youtube.py  youtube_channel.py
domain/repository/: youtube_channel_repository.py  youtube_repository.py
infrastructure/api/: youtube_api_client.py
infrastructure/persistence/: mongo_channel_repository.py  mongo_repository.py
shared/: utils.py
shared/config/: settings.py
src/application/: exceptions.py  main.py
src/application/commands/: cli.py
src/application/exceptions/: handlers.py
src/application/routers/youtube/: dependencies.py  router.py
src/application/schemas/: common.py  youtube.py  youtube_schema.py
src/application/scripts/: update_channel_schema.py
src/application/services/: youtube_service.py
src/client/: app.py
src/domain/adapter/: youtube_api_adapter.py
src/domain/exceptions/: youtube.py
src/domain/model/: url.py  youtube.py
src/domain/repository/: crawler_schedule.py
src/infrastructure/api/: youtube_api_client.py
src/infrastructure/persistence/: client.py  mongo_repository.py
src/shared/: utils.py
