[project]
name = "rag-project"
version = "0.1.0"
description = ""
authors = [
    {name = "maba",email = "gyj0149@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "youtube-transcript-api (>=1.2.3,<2.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "google-genai (>=1.46.0,<2.0.0)",
    "yt-dlp (>=2025.10.22,<2026.0.0)",
    "boto3 (>=1.40.62,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false