[project]
name = "rag-project"
version = "0.1.0"
description = ""
authors = [
    {name = "maba",email = "gyj0149@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "youtube-transcript-api (>=1.2.3,<2.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "google-genai (>=1.46.0,<2.0.0)",
    "yt-dlp (>=2025.10.22,<2026.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "fastapi[standard] (>=0.121.0,<0.122.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false

[tool.ruff]
# 줄 길이 설정 (보통 88 또는 120 사용)
line-length = 120

[tool.ruff.lint]
# 활성화할 규칙 모음
# E: pycodestyle (에러)
# F: Pyflakes (버그 위험)
# I: isort (임포트 정렬)
# W: pycodestyle (경고)
select = ["E", "F", "I", "W"]

# 무시할 규칙 (필요에 따라 추가)
ignore = []

[tool.ruff.format]
# 따옴표 스타일 (더블 쿼트 권장)
quote-style = "double"